Fix body alignment, nav bar

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,8 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
+@import url(https://fonts.googleapis.com/css?family=Fjalla+One|Arimo:400,700);
 
 /* Color reference:
 background color: #d7fae0
-body background color: #F1F2F0
+body background color: #fcfcfc
 text color: #35342F
 link color: #3c8c4e
 ---visited: #463E66
@@ -13,69 +13,60 @@ hov-outline: #306d3d
 
 html {
 
-background: #d7fae0;
-background: -moz-linear-gradient(top, #d7fae0 0%, #d7fae0 4%, #254d57 88%, #254d57 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, #d7fae0), color-stop(4%, #d7fae0), color-stop(88%, #254d57), color-stop(100%, #254d57));
-background: -webkit-linear-gradient(top, #d7fae0 0%, #d7fae0 4%, #254d57 88%, #254d57 100%);
-background: -o-linear-gradient(top, #d7fae0 0%, #d7fae0 4%, #254d57 88%, #254d57 100%);
-background: -ms-linear-gradient(top, #d7fae0 0%, #d7fae0 4%, #254d57 88%, #254d57 100%);
-background: linear-gradient(to bottom, #d7fae0 0%, #d7fae0 4%, #254d57 88%, #254d57 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7fae0', endColorstr='#254d57', GradientType=0 );
-
-
-  padding: 7% 10% 130px 10%;
-  font-family: Lora;
+  background: #d7fae0;
+  background: -moz-linear-gradient(top, #d7fae0 0%, #d7fae0 4%, #254d57 88%, #254d57 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, #d7fae0), color-stop(4%, #d7fae0), color-stop(88%, #254d57), color-stop(100%, #254d57));
+  background: -webkit-linear-gradient(top, #d7fae0 0%, #d7fae0 4%, #254d57 88%, #254d57 100%);
+  background: -o-linear-gradient(top, #d7fae0 0%, #d7fae0 4%, #254d57 88%, #254d57 100%);
+  background: -ms-linear-gradient(top, #d7fae0 0%, #d7fae0 4%, #254d57 88%, #254d57 100%);
+  background: linear-gradient(to bottom, #d7fae0 0%, #d7fae0 4%, #254d57 88%, #254d57 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7fae0', endColorstr='#254d57', GradientType=0 );
+  height: 100%;
+    font-family: Arimo;
 }
 
 body {
-  border-radius: 50px 10px 75px 10px;
-  background-color: #F1F2F0;
+  margin: 0 3%;
+  height: 100%;
+  width: 93%;
+  background-color: #fcfcfc;
 }
 
-header, section, footer{
-  margin: 0 auto;
-  text-align: center;
-  width: 80%;
+a {text-decoration: none;}
 
-  color: #35342f;
-}
-
-a:link {
+header a:link {
   text-decoration: none;
   color: #3c8c4e;
 }
 
-p>a:visited {
-  color: #26769b;
-  text-decoration: line-through;
-}
-
 header {
-  position: relative;
-  display: block;
-  float: left;
-  height: 100%;
+  /*display: inline-block;*/
+  /*float: left;*/
+  font-family: Fjalla One;
   width: 100%;
-  padding: 25px 0px 0px 0px;
+  /*padding: 25px 0px 0px 0px;*/
 }
 
-nav li {
+nav {
+  height: 100%;
+  padding: 0 2%;
+}
+
+nav>a {
   display: inline-block;
-  width: 8%;
-  padding: 10px 5px 10px 5px;
+  padding: 4% 1%;
   min-width: 35px;
 
-  list-style-type: none;
-  font-size: 13pt;
-  color: #3c8c4e;
+  font-size: 1.8em;
+
 }
 
-nav a:hover {
-  color: #296035;
-  -webkit-text-stroke: 1px #306d3d;
+nav>a:hover {
+
+  background-color: #9b9b9b;
 }
 
-nav a:active {
+nav>a:active {
   color: #296035;
   font-weight: bold;
 }
@@ -84,37 +75,49 @@ nav a:visited {
   color: #3c8c4e;
 }
 
-header>h3 {
+#name-text {
   color: #1D667C;
   text-align: right;
-  font-size: 15pt;
+  font-size: 22pt;
   float: right;
-  margin: 0px 30px 0px 30px;
+  margin: 3% 7%;
+}
+
+p a:visited {
+  color: #26769b;
+  /*text-decoration: line-through;*/
 }
 
 section {
-  display: block;
-  padding: 10px 50px 10px 50px;
+  clear: right;
+  margin: auto 15%;
 }
 
 section>h2 {
   margin-top: 1%;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
+  text-align: center;
 }
 
 section p {
   text-align: justify;
 }
 
-.social-icons {
-  max-width: 350px;
+.contact {
+  margin: 3% auto;
+}
+
+#social-icons {
+  width: 100%;
+  max-width: 1100px;
+  max-height: 150px;
   min-width: 80px;
-  margin: 0 auto;
+  min-height: 80px;
 }
 
 .social-icons img {
   height: 60px;
-  padding: 5px 10px 5px 10px;
+  padding: 5% 5%;
 }
 
 footer {
